src/objects/OrgMaster__c.object
<CustomObject>
    <fields>
        <fullName>Org_Bus_ID__c</fullName>
        <label>Org_Bus_ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name_Primary_Org__c</fullName>
        <label>Supplier Name(Primary Org)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>